tests/ui/macros/metavar-expressions/concat-raw-identifiers.stderr
error: expected identifier or string literal
  --> $DIR/concat-raw-identifiers.rs:28:22
   |
LL |         let ${concat(r#abc, abc)}: () = ();
   |                      ^^^^^

error: expected identifier or string literal
  --> $DIR/concat-raw-identifiers.rs:32:27
   |
LL |         let ${concat(abc, r#abc)}: () = ();
   |                           ^^^^^

error: expected identifier or string literal
  --> $DIR/concat-raw-identifiers.rs:35:22
   |
LL |         let ${concat(r#abc, r#abc)}: () = ();
   |                      ^^^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:5:28
   |
LL |         let ${concat(abc, $rhs)}: () = ();
   |                            ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:12:23
   |
LL |         let ${concat($lhs, abc)}: () = ();
   |                       ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:19:23
   |
LL |         let ${concat($lhs, $rhs)}: () = ();
   |                       ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:19:29
   |
LL |         let ${concat($lhs, $rhs)}: () = ();
   |                             ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:19:23
   |
LL |         let ${concat($lhs, $rhs)}: () = ();
   |                       ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:42:28
   |
LL |         let ${concat(abc, $rhs)}: () = ();
   |                            ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:49:23
   |
LL |         let ${concat($lhs, abc)}: () = ();
   |                       ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:56:23
   |
LL |         let ${concat($lhs, $rhs)}: () = ();
   |                       ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:56:29
   |
LL |         let ${concat($lhs, $rhs)}: () = ();
   |                             ^^^

error: `${concat(..)}` currently does not support raw identifiers
  --> $DIR/concat-raw-identifiers.rs:56:23
   |
LL |         let ${concat($lhs, $rhs)}: () = ();
   |                       ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: expected pattern, found `$`
  --> $DIR/concat-raw-identifiers.rs:28:13
   |
LL |         let ${concat(r#abc, abc)}: () = ();
   |             ^ expected pattern
...
LL |     no_params!();
   |     ------------ in this macro invocation
   |
   = note: this error originates in the macro `no_params` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 14 previous errors

